--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,13 @@ dist.jar=${dist.dir}/ProjetoCrud.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.41-bin.jar=C:\\Users\\Eduardo\\Desktop\\Aula_CURD_JAVA\\mysql-connector-java-5.1.41\\mysql-connector-java-5.1.41-bin.jar
+file.reference.rs2xml.jar=../rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.41-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.41-bin.jar}:\
+    ${file.reference.rs2xml.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
